# multi-agent-investment-research-assistant

./: .env.example  .gitignore  PROJECT_PLAN.md  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  fundamentals.py  market_data.py  news_sentiment.py  risk.py  synthesizer.py  verifier.py
backend/app/api/: research.py
backend/app/graph/: __init__.py  nodes.py  workflow.py
backend/app/models/: __init__.py  agent_outputs.py  common.py  graph_state.py  requests.py  responses.py
backend/app/prompts/: news_sentiment.md  risk.md  synthesis.md
backend/app/services/: __init__.py  llm.py  news.py  ticker_resolver.py
backend/tests/: test_config.py  test_frontend_api_client.py  test_fundamentals_agent.py  test_health.py  test_llm_service.py  test_market_data_agent.py  test_models.py  test_news_sentiment_agent.py  test_news_service.py  test_research_endpoint.py  test_risk_agent.py  test_synthesizer_agent.py  test_ticker_resolver.py  test_verifier_agent.py  test_workflow.py
docs/: agent_contracts.md  architecture.md
frontend/: Dockerfile  api_client.py  app.py
frontend/components/: report_view.py
scripts/: debug_llm_call.py
